<resources>
    <string name="app_name">Cmpe408MtCalculatorApp</string>
    <string name="operations"></string>
    <string name="result"></string>
    <string name="mod">%</string>
    <string name="clear_all">CE</string>
    <string name="clear">C</string>
    <string name="delete">D</string>
    <string name="one_over_x">1/x</string>
    <string name="square">x²</string>
    <string name="square_root">√x</string>
    <string name="division">/</string>
    <string name="multiply">*</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="decimal">.</string>
    <string name="plus_minus">±</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
</resources>