<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5D5D5"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonsLayout"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/white">
        <TextView
            android:id="@+id/operations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/operations"
            android:textSize="30sp"
            android:textColor="#818181"
            android:padding="20dp"
            android:background="@color/white" />
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:text="@string/result"
            android:textSize="30sp"
            android:textColor="#818181"
            android:padding="20dp"
            android:background="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/modBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/mod"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/clearAllBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/clear_all"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#EDEDED"
                android:text="@string/delete"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/oneOverXBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/one_over_x"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/squareBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/square"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/squareRootBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#EDEDED"
                android:text="@string/square_root"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/divisionBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#EDEDED"
                android:text="@string/division"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/sevenBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/seven"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/eightBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/eight"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/nineBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/nine"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/multiplyBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#EDEDED"
                android:text="@string/multiply"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/fourBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/four"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/fiveBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/five"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/sixBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/six"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/subtractionBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#EDEDED"
                android:text="@string/subtraction"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/oneBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/one"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/twoBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/two"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/threeBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/three"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/additionBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#EDEDED"
                android:text="@string/addition"
                android:textSize="20sp"
                android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/plusMinusBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/plus_minus"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/zeroBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/zero"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/decimalBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/decimal"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <Button
                android:id="@+id/equalsBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#237FC8"
                android:text="@string/equals"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>